# ia-healthcare-data-structure

./: .env  pyproject.toml  run.py
data/: 2023-03-01_sigesguarda_-_Base_de_Dados (1).csv:Zone.Identifier
guard-me-data-structure/: __init__.py
guard-me-data-structure/database/: config.py  database.py
guard-me-data-structure/model/: event.py
guard-me-data-structure/service/: parse_data.py
