[tool.poetry]
name = "guard-me-data-structure"
version = "0.1.0"
description = ""
authors = ["Coelho <thystockler@gmail.com>"]
readme = "README.md"
packages = [{include = "guard-me-data-structure"}]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.5"
psycopg2 = "^2.9.5"
python-dotenv = {extras = ["cli"], version = "^1.0.0"}
unicode = "^2.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
